--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
+    "json-server": "^0.17.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
