--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gray-matter": "^4.0.3",
     "json-server": "^0.17.1",
     "next": "12.3.1",
+    "next-auth": "^4.17.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
